# bookmark-app

./: ReadMe.md  migration.sql  package-lock.json  spin.toml
assets/css/: app.css
web/: Cargo.toml
web/src/: lib.rs
web/src/controllers/: auth.rs  bookmarks.rs  home.rs  mod.rs  user.rs
web/src/models/: mod.rs  users.rs
web/templates/: about.html  base.html  bookmarks.html  hello.html  index.html  notfound.html
